<resources>
    <string name="app_name">FirebasePoster</string>
    <string name="hint_url">hoge-12345</string>
    <string name="label_rootkey">root key:</string>
    <string name="hint_rootkey">fuga</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="get">get</string>

    <string name="device">Device</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="alert_not_input_url">Please input firebase URL and root key</string>
</resources>
